log
Fri 28 Mar 2025 02:43:13 PM UTC: 
 list.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
25021aa
Fri 28 Mar 2025 02:56:54 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
8e02c95
Fri 28 Mar 2025 02:59:29 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|4
total_score: 25/70
4497872
Fri 28 Mar 2025 03:01:42 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|4
total_score: 25/70
dfb5658
Fri 28 Mar 2025 03:04:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
416db6c
Sat 29 Mar 2025 11:11:08 PM UTC: 
 list.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
19b31d9
Sat 29 Mar 2025 11:23:55 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2f26439
Sat 29 Mar 2025 11:42:21 PM UTC: 
 list.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
6deafe4
Sat 29 Mar 2025 11:52:53 PM UTC: 
 list.c | 28 ++++++++++++++++++++--------
 1 file changed, 20 insertions(+), 8 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:111:12: error: unused variable ‘data’ [-Werror=unused-variable]
  111 |     void * data = list->current->data;
      |            ^~~~
cc1: all warnings being treated as errors
Compilation failed
83bda5e
Sat 29 Mar 2025 11:57:10 PM UTC: 
 list.c | 18 +++++++-----------
 1 file changed, 7 insertions(+), 11 deletions(-)
 tests:  0|0
80962fd
Sat 29 Mar 2025 11:58:31 PM UTC: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
14e74e8
